package za.co.mkhungo.model.enums;

/**
 * @author Noxolo.Mkhungo
 */
public enum OrderStatus {
    ACCEPTED,PACKAGED,SHIPPED
}
